# sensor_hub

./: CMakeLists.txt  package.xml
cfg/: SensorHub.cfg
include/sensor_hub/: protocol.h  sensor_hub.h
launch/: sensor_hub.launch
serial_protocol/: protocol.cpp  protocol.h
sketch/sensor_hub/: sensor_hub.ino
src/nodes/: param_set_node.cpp  param_set_node.h  sensor_hub_node.cpp  sensor_hub_node.h
