<?xml version="1.0"?>
<package format="2">
  <name>sensor_hub</name>
  <version>0.0.0</version>
  <description>The sensor_hub package</description>

  <maintainer email="satoshi.ota928@gmail.com">satoshi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hongo_msgs</depend>

</package>
